# algorithm-collection

./: .gitignore  readme.md
base_placement/: README.md  capability_map.py  capsules.py  config.yaml  hdf5_eef_workspace.py  layout_eval.py  refine_ik.py  render_layout.py  robot_model.py  run_pipeline.py  saturation_check.py  task_points.py  visualize.py
config_space/: AStar.py  rr_robot.py  rr_robot_config_space_interactive.py  rr_robot_config_space_path_search.py
config_space/diffusion/: dataset.py
geometry/: com_ik.py  reflection_matrix_coordinate_conversion.py  sat.py
geometry/ankle_solver/: ankle_solver.py  ankle_solver_np.py  readme.md  test_c_wrapper.py
geometry/ankle_solver/cpp_version/: CMakeLists.txt
geometry/ankle_solver/cpp_version/autogen_code/: ankle_functions.c
geometry/ankle_solver/cpp_version/include/: ankle_solver.h
geometry/ankle_solver/cpp_version/src/: ankle_solver.cpp
geometry/ankle_solver/cpp_version/test/: equivalence_test.cpp  example.cpp
geometry/ankle_solver/mujoco_sim/: README.md  ankle_robot.py  requirements.txt
geometry/ankle_solver/mujoco_sim/assets/: ankle.xml
joint_zero_point_cali/: requirements.txt
joint_zero_point_cali/arm/: arm_joint_cali.py  arm_kinematics.py
joint_zero_point_cali/plane_arm/: R2Descent.py  R3LM.py  R3Nlopt.py
ml/VAE/: README.md  example_latent_test.py  requirements.txt  vae_models.py  vae_train.py
ml/auto-encoder/: README.md  ae_models.py  ae_pca.py  ae_train.py  requirements.txt
ml/flow_matching/: fm_model.py
